# example-mitralgj

./: readme.md
mitral_arbor/: CMakeLists.txt  mitral.cpp  parameters.hpp  reg_gj.json  tweak_gj.json
mitral_arbor/inputs/: no_gj.json  tuft_no_gj.json  tuft_reg_gj.json  tuft_tweak_gj.json
mitral_neuron/: forfig6-modeldb.hoc  jsonify.py  jsonify.sh
